style.css
:root {
    --bg-color: rgb(31, 41, 55);
    --second-color: #0084FF;
}

body {
    margin: 0;
    padding: 0;
    font-family: 'Poppins';
    box-sizing: border-box;
}
p {
    margin: 0;
    padding: 0;
}
.logo {
    font-size: 2rem;
    font-weight: 600;
    color: white;
}
header {
    padding: 10px;
    display: grid;
    grid-template-columns: 2fr 1fr;
    align-content: center;
    padding-left: 50px;
    width: 100%;
    backdrop-filter: blur(8px);
    background-color: rgba(31, 41, 55, 0.6);
    position: fixed;
    color: white;
    align-items: center;
}
.fa-bars {
    margin-left: 50px;
    display: none;
}
.links {
    display: grid;
    grid-template-columns: 100px 100px 100px;
}
.link {
    font-size: 1.1rem;
    cursor: pointer;
   
}
.link::after {
    content: '';
    display: block;
    height: 2px;
    width: 0%;
    background-color: white;
    transition: all 0.4s ease-in-out;
}
.link:hover::after {
    width: 60%;
    height: 2px;
    background-color: var(--second-color);
}

.hero-section {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-column-gap: 50px;
    align-items: center;
    justify-items: center;
    padding: 8rem 0;
    background-color: var(--bg-color);
    width: 100%;
}
.text-content {
    padding-left: 150px;
    display: grid;
    grid-row-gap:  20px; ;
}
.heading {
    font-weight: 600;
    font-size: 2.5rem;
    color: white;
}
.para {
    font-size: 1rem;
    color: white;
}
.cta-btn, .view {
    justify-self: start;
    padding: 10px 30px;
    font-size: 1.1rem;
    background-color: var(--second-color);
    border: none;
    color: white;
    border-radius: 8px;
    cursor: pointer;
    transition: all 0.4s ease-in-out;
}
.cta-btn:hover, .buy:hover, .view:hover {
    box-shadow: 0 0 25px var(--second-color);
    transform: translateY(-1.111rem);
}
.doge {
    width:  400px;
    height: 400px;
    object-fit: cover;
    border-radius: 70px;
    border: 8px solid white;
}
.store {
    margin-top: 50px;
    height: 500px;
    margin-bottom: 10rem;
}
.store-heading {
    color: var(--bg-color);
    font-size: 2.5rem;
    font-weight: 600;
    text-align: center;
    margin-bottom: 5rem;
}
.merch-img {
    width: 15rem;
}
.merch-cards {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr;
    align-items: center;
    justify-items: center;
    padding: 50px;
    background-color: white;
}

.card {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    transition: all 0.4s ease-in-out;
    padding: 10px 20px;
    cursor: pointer;
    border-radius: 20px;
}
.card:hover {
    box-shadow: 0 0 50px rgba(0 ,0, 0, 0.3);
}
.card-title {
    font-size: 0.8rem;
    margin-top: 25px;
    color: black;
}
.seller {
    font-size: 0.7rem;
    color: rgb(65, 65, 65);
}
.price {
    font-size: 1.2rem;
    font-weight: 600;
}

.quote {
    display: grid;
    place-content: center;
    margin-top: 50px;
    padding: 35px;
    background-color: #E7E7E7;
}
.quote-text {
    width: 350px;
    font-weight: 200;
    font-size: 1.2rem;
    text-align: center;
}
.author {
    font-weight: 600;
    text-align: right;
}
.cta {
    margin-top: 50px;
    padding: 5rem;
    background-color: var(--second-color);
    display: grid;
    align-content: center;
    justify-content: center;
    text-align: center;
}
.cta-heading {
    font-size: 2.5rem;
    font-weight: 600;
    color: white;
    margin-bottom: 1.5rem;
}
.cta-para {
    width: 400px;
    font-size: 1rem;
    line-height: 1.5rem;
    color: white;
    margin-bottom: 1.5rem;
}
.input {
    padding-top:    10px;
    padding-bottom: 10px;
    padding-left: 20px;
    padding-right: 150px;
    border-radius: 8px;
    border: none;
}
.newsletter {
    padding: 11px 10px;
    border: none;
    background-color: white;
    color: var(--bg-color);
    border-radius: 8px;
    cursor: pointer;
}
footer {
    margin-top: 50px;
    background-color: var(--bg-color);
    color: white;
    padding: 70px;
    text-align: center;
    
}
.footer-link {
    color: white;
}

@media (max-width: 768px) {
    header {
        grid-template-columns: 2fr 250px;
    }
    .links {
        display: grid;
        width: 100%;
        grid-template-columns: 100px;
        place-content: center;
        grid-template-rows: repeat(3, 50px);
        margin-top: 30px;
    }
    .links {
        display: none;
    }
    .links.active {
        display: grid;
    }
    .fa-bars {
        display: flex;
        margin-left: 100px;
    }


    .hero-section {
        grid-template-columns: 1fr;
    }
    .text-content {
        padding: 0 50px;
        display: flex;
        flex-direction: column;
        align-items: center;
        margin-bottom: 30px;
    }

    .doge {
        width:  240px;
        height: 240px;
        object-fit: cover;
        border-radius: 40px;
        border: 8px solid white;
    }

    .store-heading {
        margin: 0;
    }
    .card {
        padding: 10px 10px;
        margin-top: 50px;
    }
    .card-title {
        width: 150px;
    }
    .merch-cards {
        padding: 10px 10px;
        grid-template-columns: 1fr 1fr;
    }
    .merch-img {
        align-items: center;
        width: 10rem;
    }
    .quote {
        padding: 20px;
        margin-top: 300px;
    }
    .quote-text {
        font-size: 1rem;
    }
    .author {
        text-align: center;
    }
    .cta-text-content {
        display: flex;
        flex-direction: column;
    }
    .form {
        display: flex;
        flex-direction: column;
        align-items: center;
    }
    .newsletter {
        margin-top: 15px;
    }
    .cta-para {
        width: 300px;
    }
}

